# alexeictrl

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
CVS/: Entries  Repository
autom4te.cache/: output.0  requests  traces.0
autom4te.cache/CVS/: Repository  Root
bootdisk/CVS/: Repository
client/: Makefile  Makefile.am  Makefile.in  alexeictrl_client.c
client/.deps/: alexeictrl_client.Po
client/CVS/: Entries  Repository
libalexeictrl/: Makefile  Makefile.am  Makefile.in  conversion.c  conversion.h  conversion.lo  debug.c  debug.h  debug.lo  disp.c  disp.h  disp.lo  example.xml  libalexeictrl.la  network.c  network.h  network.lo  protocol.h
libalexeictrl/.deps/: conversion.Plo  debug.Plo  disp.Plo  network.Plo
libalexeictrl/.libs/: libalexeictrl.la
libalexeictrl/CVS/: Entries  Repository
server/: Makefile  Makefile.am  Makefile.in  alexeictrl_server.c  alexeictrl_server.h  parport.c  parport.h
server/.deps/: alexeictrl_server.Po  parport.Po
server/CVS/: Entries  Repository
tests/: Makefile  Makefile.am  Makefile.in  botstate_test  botstate_test.c  network_test  network_test.c  parport_ascii  parport_ascii.c  parport_test  parport_test.c
tests/.deps/: botstate_test.Po  network_test.Po  parport_ascii.Po  parport_test.Po
tests/CVS/: Entries  Repository
tools/: Makefile  Makefile.am  Makefile.in  logo.c  logo_lex.y  test.logo
tools/.deps/: logo.Po
tools/CVS/: Entries  Repository
